objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>HC_prcs_clientePotencialSeguros</fullName>
        <description>Lead Process para el Cliente potencial de Seguros</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contrato Firmado</fullName>
        </values>
        <values>
            <fullName>Contrato Generado</fullName>
        </values>
        <values>
            <fullName>En proceso de Contratación</fullName>
        </values>
        <values>
            <fullName>Esperando Firma</fullName>
        </values>
        <values>
            <fullName>Pendiente Documentación</fullName>
        </values>
        <values>
            <fullName>Pendiente Generar Contrato</fullName>
        </values>
        <values>
            <fullName>Rechazada</fullName>
        </values>
        <values>
            <fullName>Solicitud de Llamada</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HealthCloudGA__LeadToPatientProcess</fullName>
        <description>Lead to Patient conversion process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>New - Not Contacted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HealthCloudGA__Referral</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>New - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Process</fullName>
        <description>Standard Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>New - Not Contacted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HC_fld_cuentaBancaria__c</fullName>
        <description>Código de la cuenta bancaria (IBAN)</description>
        <label>Código de la cuenta bancaria (IBAN)</label>
        <length>24</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HC_fld_documentoIdentidad__c</fullName>
        <description>D.N.I</description>
        <label>D.N.I</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HC_fld_documentosNecesariosAdjuntar__c</fullName>
        <defaultValue>&apos;Documento de Identificación (DNI o NIE)&apos;</defaultValue>
        <label>Documentos Necesarios Adjuntar</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Documento de Identificación (DNI o NIE)</fullName>
                </value>
                <value>
                    <fullName>Justificante de Domicilio</fullName>
                </value>
                <value>
                    <fullName>Número de Seguridad Social</fullName>
                </value>
                <value>
                    <fullName>Historia Médica</fullName>
                </value>
                <value>
                    <fullName>Datos Bancarios</fullName>
                </value>
                <value>
                    <fullName>Justificante de Ingresos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_fld_estadoCivil__c</fullName>
        <description>Estado Civil: Soltero, Casado, Viudo, Divorciado</description>
        <label>Estado Civil</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Soltero</fullName>
                </value>
                <value>
                    <fullName>Casado</fullName>
                </value>
                <value>
                    <fullName>Viudo</fullName>
                </value>
                <value>
                    <fullName>Divorciado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_fld_frecuenciaPago__c</fullName>
        <description>Frecuencia de Pago</description>
        <label>Frecuencia de Pago</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mensual</fullName>
                </value>
                <value>
                    <fullName>Trimestral</fullName>
                </value>
                <value>
                    <fullName>Semestral</fullName>
                </value>
                <value>
                    <fullName>Anual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_fld_identificacionBanco__c</fullName>
        <description>Santander(BSCHESMMXXX), BBVA (BBVAESMMXXX), Caixa (CAIXESBBXXX), Sabadell(BSABESBBXXX), Bankinter(BKBKESMMXXX), Unicaja (UCJAES2MXXX)</description>
        <label>Código de identificación del banco (BIC)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Santander(BSCHESMMXXX)</fullName>
                </value>
                <value>
                    <fullName>BBVA (BBVAESMMXXX)</fullName>
                </value>
                <value>
                    <fullName>Caixa (CAIXESBBXXX)</fullName>
                </value>
                <value>
                    <fullName>Sabadell (BSABESBBXXX)</fullName>
                </value>
                <value>
                    <fullName>Bankinter (BKBKESMMXXX)</fullName>
                </value>
                <value>
                    <fullName>Unicaja (UCJAES2MXXX)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_fld_preferenciasComunicacion__c</fullName>
        <description>Preferencias de Comunicación</description>
        <label>Preferencias de Comunicación</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Teléfono</fullName>
                </value>
                <value>
                    <fullName>Correo Postal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_fld_quieroInfo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo custom que indica si el usuario Quiere recibir información sobre productos</description>
        <label>Quiero recibir información sobre product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HC_fld_tipoPago__c</fullName>
        <description>Tipo de Pago: Orden de Domiciliación o No domiciliada</description>
        <label>Tipo Pago</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Orden de Domiciliación</fullName>
                </value>
                <value>
                    <fullName>No domiciliada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Age__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (DEPRECATED)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AnticipatedDischargeDate__c</fullName>
        <label>Anticipated Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AssignCareCoordinatorContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Coordinator Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>CareCoordinatorContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AssignCareCoordinatorUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Coordinator User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CareCoordinatorUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__BirthDate__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanRecordTypeName__c</fullName>
        <description>Record Type name to use for Care Plan when we convert this lead into a Patient.</description>
        <label>Care Plan Record Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanRecordTypeNamespace__c</fullName>
        <description>Record Type namespace to use for Care Plan when we convert this lead into a Patient.</description>
        <label>Care Plan Record Type Namespace</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CreatedFromLead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Created from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Diagnosis__c</fullName>
        <description>Comma-delimited list of diagnoses or ICD codes associated with the referral.</description>
        <label>Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DischargeDate__c</fullName>
        <label>Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EmergencyContactFirstName__c</fullName>
        <label>Emergency Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EmergencyContactLastName__c</fullName>
        <label>Emergency Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EmergencyContactPhone__c</fullName>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EmergencyContactRelationship__c</fullName>
        <label>Emergency Contact Relationship</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FaceToFaceEncounterDate__c</fullName>
        <label>Face-to-Face Encounter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Homebound__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Homebound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__InsuranceGroupId__c</fullName>
        <description>Group ID of the patient&apos;s insurance.</description>
        <label>Insurance Group ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__InsuranceMemberId__c</fullName>
        <description>Member ID of the patient&apos;s insurance.</description>
        <label>Insurance Member ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__InsuranceType__c</fullName>
        <description>Type of primary insurance: Medicare, Medicaid, Commercial or Self-Pay</description>
        <label>Insurance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Self-pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsMarkedForPatientConversion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the Lead should be converted to Patient</description>
        <label>IsMarkedForPatientConversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsOutOfNetwork__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the referral is out of network.</description>
        <label>Out Of Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Tagalog</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicalRecordNumber__c</fullName>
        <description>The medical record number is organization specific. The number is used by the hospital as a systematic documentation of a patient´s medical history and care during each hospital stay.</description>
        <label>Medical Record Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrimaryCareProvider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Care Provider</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Primary Care Provider)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrimaryDiagnosisDescription__c</fullName>
        <label>Primary Diagnosis Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrimaryDiagnosis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary diagnosis associated with the Referral</description>
        <label>Primary Diagnosis</label>
        <referenceTo>HealthCareDiagnosis</referenceTo>
        <relationshipLabel>Leads (PrimaryDiagnosis)</relationshipLabel>
        <relationshipName>Leads3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrimaryInsurance__c</fullName>
        <description>Primary health insurance company associated with the patient.</description>
        <label>Primary Insurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Priority__c</fullName>
        <description>Priority of the referral as designated by the referring provider.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emergent</fullName>
                </value>
                <value>
                    <fullName>Routine</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReasonForDisqualification__c</fullName>
        <label>Reason for Disqualification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MD declines to sign orders</fullName>
                </value>
                <value>
                    <fullName>Patient refuses services</fullName>
                </value>
                <value>
                    <fullName>Another agency is involved</fullName>
                </value>
                <value>
                    <fullName>Requested services can’t be provided</fullName>
                </value>
                <value>
                    <fullName>Requested services aren’t needed</fullName>
                </value>
                <value>
                    <fullName>Patient isn’t eligible for insurance</fullName>
                </value>
                <value>
                    <fullName>Patient is outside coverage area</fullName>
                </value>
                <value>
                    <fullName>Referral was canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReasonForOutOfNetworkReferral__c</fullName>
        <description>Reason the referral is sent out of network.</description>
        <label>Reason for Out of Network Referral</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provider Preference</fullName>
                </value>
                <value>
                    <fullName>Patient Preference</fullName>
                </value>
                <value>
                    <fullName>Limited Provider Availability</fullName>
                </value>
                <value>
                    <fullName>Service Not Offered</fullName>
                </value>
                <value>
                    <fullName>Insurance Not Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReasonforReferral__c</fullName>
        <label>Reason for Referral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferredToOrganization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the organization receiving or fulfilling the referral.</description>
        <label>Referred To Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Referred To Organization)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferredToPractitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the practitioner to whom the patient is being referred.</description>
        <label>Referred To Practitioner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Referred To Practitioner)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferredToUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the user to whom the referral is sent.</description>
        <label>Referred To User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferrerAdmitDate__c</fullName>
        <label>Referrer Admit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferringContactName__c</fullName>
        <label>Referring Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferringContactPhone__c</fullName>
        <label>Referring Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferringNPI__c</fullName>
        <label>Referring NPI</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferringOrganization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the referring organization.</description>
        <label>Referring Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferringPractitionerScore__c</fullName>
        <description>Referrer score associated with the referring practitioner</description>
        <formula>HealthCloudGA__ReferringPractitioner__r.HealthCloudGA__ReferrerScore__c</formula>
        <label>Referring Practitioner Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferringPractitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the practitioner who submitted the referral.</description>
        <label>Referring Practitioner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Referring Practitioner)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferringUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the user who submitted the referral.</description>
        <label>Referring User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to the patient or member Account who is being referred.</description>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Related Account)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SSN__c</fullName>
        <label>SSN</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SecondaryDiagnosisDescription__c</fullName>
        <label>Secondary Diagnosis Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SecondaryDiagnosis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Secondary diagnosis associated with the Referral.</description>
        <label>Secondary Diagnosis</label>
        <referenceTo>HealthCareDiagnosis</referenceTo>
        <relationshipLabel>Leads (SecondaryDiagnosis)</relationshipLabel>
        <relationshipName>Leads4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SecondaryInsuranceID__c</fullName>
        <label>Secondary Insurance ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SecondaryInsurance__c</fullName>
        <label>Secondary Insurance</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SigningProvider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Signing Provider</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Signing Provider)</relationshipLabel>
        <relationshipName>LeadsSigningProvider</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <description>An external identifier for the Candidate Patient.</description>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Specialty__c</fullName>
        <description>Specialty associated with the referral.</description>
        <label>Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Orthopedics</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Neurosurgery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__StartResumptionOfCareDate__c</fullName>
        <label>Start/Resumption of Care Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__StatusGroup__c</fullName>
        <label>Status Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Monitored</fullName>
                </value>
                <value>
                    <fullName>NotMonitored</fullName>
                    <label>Not Monitored</label>
                </value>
                <value>
                    <fullName>PositiveTest</fullName>
                    <label>Positive Test</label>
                </value>
                <value>
                    <fullName>ReadyForIntake</fullName>
                    <label>Ready for Intake</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TertiaryDiagnosis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tertiary diagnosis associated with the Referral.</description>
        <label>Tertiary Diagnosis</label>
        <referenceTo>HealthCareDiagnosis</referenceTo>
        <relationshipLabel>Leads (TertiaryDiagnosis)</relationshipLabel>
        <relationshipName>Leads5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TypeOfService__c</fullName>
        <description>Type of service requested.</description>
        <label>Type Of Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consultation</fullName>
                    <default>true</default>
                    <label>Consultation</label>
                </value>
                <value>
                    <fullName>2nd Opinion</fullName>
                </value>
                <value>
                    <fullName>Radiology Services</fullName>
                </value>
                <value>
                    <fullName>Lab Services</fullName>
                </value>
                <value>
                    <fullName>Follow up</fullName>
                </value>
                <value>
                    <fullName>Surgery</fullName>
                </value>
                <value>
                    <fullName>Other (please specify in comments)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>HC_contratoGenerado</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Contrato Generado</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.HC_rt_cPotencialMbrSeguro</value>
        </filters>
        <label>Lead&apos;s Contrato Generado</label>
    </listViews>
    <listViews>
        <fullName>HC_esperandoFirma</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.HC_rt_cPotencialMbrSeguro</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Esperando Firma</value>
        </filters>
        <label>Lead&apos;s Esperando Firma</label>
    </listViews>
    <listViews>
        <fullName>HC_leadsEnProcesoContratacion</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>En proceso de Contratación</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.HC_rt_cPotencialMbrSeguro</value>
        </filters>
        <label>Lead&apos;s En proceso de Contratación</label>
    </listViews>
</CustomObject>